# ADLCV-VisualDebuggerVLM

./: .gitignore  EvaluateModels.py  GRPOTrain.py  README.md  README_TASK3_SNIPPET.md  SFTTrain.py  baseline_evaluate_metrics.json  benchmark_results.json  dataset_generation.py  evaluate_task3_pope.py  generated_dataset.json  generated_dataset_test.json  generated_tricky_dataset.json  grpo_dataset.py  grpo_rewards.py  label_distributions.py  main.py  modelBenchmarks.py  plot_benchmark_results.py  plot_grpo_diagnostics.py  plot_hallucination_metrics.py  project_description.md  pyproject.toml  sftGRPO_eval_metrics.json  submissionscripttask3.sh  submit_grpo.sh  submit_grpo_full.sh  submit_task3_smoke.lsf  submit_task3_smoke.sh  task3_pipeline.py  test_grpo_dataset.py  test_grpo_rewards.py
data/VG/: attributes.json  objects.json  question_answers.json
datasets/: generated_dataset.json  hallucination_stats_dataset.json
docs/: task3_pipeline.md
metrics/grpo_local_run1/: grpo_evaluate_metrics_500_tokens8.json
metrics/sft_model_20260425_112716/: eval_metrics_history.json  eval_metrics_step_1000.json  eval_metrics_step_1500.json  eval_metrics_step_2000.json  eval_metrics_step_2447.json  eval_metrics_step_500.json  sft_metrics_final.json
models/: README.md  adapter_config.json
models/grpo_local_run1/: README.md  adapter_config.json  processor_config.json  tokenizer_config.json
models/sft_model_20260425_112716/: README.md  adapter_config.json
scripts/: get_benchmark_dataset.sh  setup_task3_env.sh  submit_task3_gpu.sh
test_metrics/: sft_evaluate_metrics.json
tests/: test_evaluate_task3_pope.py  test_task3_pipeline.py
